fix first errors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/visits">Visitas</a>
               <a class="dropdown-item" href="/students/new">Inscribir Estudiante</a>
+              <a class="dropdown-item" href="/update_password">Cambiar contraseña</a>
+              
             </div>
           </li>
           <% if can? :manage, Laboratory %>
