--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,10 +9,10 @@
           </div>
     <% end %>
 
-<h2>Administradores laboratorios</h2>
+<h2>Administradores Laboratorios</h2>
 
 <div class="right">
-<%= button_to "Agregar Administrador", new_user_path, class: "btn btn-dark"%>
+<a href="/admin/users/new" class="btn btn-dark">Agregar nuevo admin</a>
 </div>
 <table class="table">
   <thead>
@@ -20,6 +20,8 @@
       <th scope="col">id</th>
       <th scope="col">Usuario</th>
       <th scope="col">Laboratorio</th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
@@ -28,6 +30,8 @@
       <th scope="row"><%=user.id%></th>
       <td><%=user.email%></td>
       <td><%=@labs.find(user.lab_id).nombre%></td>
+      <td><a data-confirm="Estas seguro que deseas eliminar el usuario?" data-method="delete" href="users/<%=user.id%>"><i class="material-icons" style="font-size:28px;color:red">delete</i></a></td>
+      <td><a href="users/reset_password?id=<%=user.id%>" data-method="post" data-confirm="Estas seguro? la nueva contraseña será usuarioucAño">Restablecer contraseña</a></td>
     </tr>
     <%end%>
   </tbody>
