--- a/app/views/laboratories/new.html.erb
+++ b/app/views/laboratories/new.html.erb
@@ -15,6 +15,8 @@
         <input class="input-form" name="laboratory[campus]"> 
         <label class="label-form">Facultad responsable</label>
         <input class="input-form" name="laboratory[facultad]">
+        <label class="label-form">Capacidad</label>
+        <input type=number class="input-form" name="laboratory[capacity]">
     </div>
 </div>
 
