machines, wallet and hours

--- a/app/assets/stylesheets/laboratories.scss
+++ b/app/assets/stylesheets/laboratories.scss
@@ -81,6 +81,10 @@
     border: 1px solid rgb(173, 173, 173);
 }
 
+.long{
+   height: 100px;
+}
+
 .lil-title{
     font-size: 17px;
     color: rgb(32, 32, 32);
