--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -12,7 +12,7 @@
       </div>
       <div class="row-flex-div" style="margin-top:auto">
       <a class="btn btn-secondary" style="font-family:inherit" href="/machines/<%=machine.id%>">Detalles</a>
-      <button class="btn btn-primary">Reservar</button>
+      <a class="btn btn-primary" href="/reservation/<%=machine.id%>/new" >Reservar</a>
       </div>
      </div> 
   <% end %>
