--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,25 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Reservations</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @reservations.each do |reservation| %>
-      <tr>
-        <td><%= link_to 'Show', reservation %></td>
-        <td><%= link_to 'Edit', edit_reservation_path(reservation) %></td>
-        <td><%= link_to 'Destroy', reservation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Reservation', new_reservation_path %>
+<h1 style="text-align: center">Plataforma de reservas </h1>
+<div class="row-flex-div" style="justify-content: start">
+  <% @laboratories.each do |lab| %>
+    <div class="card" style= "padding: 0;align-items: center;">
+      <div class="row-flex-div" style="align-items:center;">
+        <div class="column-flex-div">
+          <p class="lil-title" style="margin-bottom: 3px"><%= lab.nombre %></p>
+          <p style="margin:0"><%= lab.campus %></p>
+        </div>
+        <a class="btn btn-secondary" style="color:white;" href="/machines/lab/<%= lab.id %>"> Seleccionar </a>
+      </div>
+    </div>
+  <% end %>
+</div>
