--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,5 +1,4 @@
 
-
 <div class="show-container">
     <div class="row-flex-div" style="justify-content: inherit">
         <%= image_tag(@machine.cover_image, :style => "width:600px") %>
@@ -8,13 +7,116 @@
             <p> Laboratorio: <%=@laboratory.nombre%></p>
             <p>Descripción: <%=@machine.description%></p>
             <p> Horario disponible para reservar: 8:00 - 18:00</p>
-            <select class="form-control" name="hora">
-                <% Hours.blocks.each do |hour, index|%>
-                    <option value="<%=index%>"><%=hour%></option>
-                <% end %>
-            </select>
-
-            <button class="btn btn-primary"> Reservar</button>
+            <form method="POST" action="/reservations" id="form">
+              <div class="column-flex-div">
+                 <p> Ingresa tu Rut en formato 12345678-9 (sin puntos con guíon)</p>
+                  <div class="row-flex-div" style="justify-content: space-around">
+                    <input id="rut-student" placeholder="Ingresa RUT" style="padding-left:5px;">
+                    <button type="button" id="check-student" class="btn btn-primary"> Revisar horas disponibles</button>
+                  </div>
+                  <p id="available-hours"></p>
+              </div>
+                <div class="row-flex-div" style="justify-content: space-around">
+                    <input type="date" id="selected-date" disabled/>
+                    <button type="button" id="check-date" class="btn btn-primary" disabled> Revisar disponiblidad de máquina</button>
+                    <input hidden name="blocks[]" id="blocks">
+                    <input hidden name="machine_id" id="machine_id" value="<%= @machine.id %>">
+                </div> 
+                <div class="row-flex-div hour-box">
+                    <%end_time = '18:00'%>
+                    <%time = "8:00"%>
+                    <%index = 0%>
+                    <%while time != end_time do %>
+                        <%if time != "13:30" && time != "13:00" && time != end_time%>
+                            <div class="hour-card disabled" id="hour-<%=index%>">
+                                <%=time%>
+                            </div>
+                        <%end%>
+                        <%splited = time.split(":")%>
+                        <%if splited[1] == "00"%>
+                            <%splited[1] = "30"%>
+                        <%else%>
+                            <%splited[1] = "00"%>
+                            <%splited[0] = splited[0].to_i + 1%>
+                        <%end%>
+                        <%time = splited[0].to_s + ":" + splited[1].to_s%>
+                        <%index = index + 1%>
+                    <%end%>  
+                </div>
+                <button class="btn btn-primary" type="button" onClick="submitForm()"> Reservar</button>
+            </form>
         </div>
     </div>
 </div>
+
+<style>
+.disabled{
+    background-color: grey;
+    color: white;
+    opacity: 0.5;
+    pointer-events: none;
+}
+
+</style>
+
+<script>
+
+ function submitForm (){
+     $("#blocks").val(JSON.stringify(window.elements));
+     $("#form").submit();
+
+  }
+  $(document).ready(function() {
+    $('#check-student').on('click', function() {
+      var selectedRut = $('#rut-student').val();
+      if(window.rut.validaRut(selectedRut)){
+        $('#check-date').prop('disabled', false);
+        $('#selected-date').prop('disabled', false);
+        $('#available-hours').text("Usuario cuenta con X horas disponibles");
+
+        // Agregaar aquí la lógica para ir a buscar las horas disponibles del estudiante. 
+
+
+
+
+
+      }else{
+        alert("RUT no valido");
+        $('#rut-student').val('');
+      }
+    })
+    $('#check-date').on('click', function() {
+      var selectedDate = $('#selected-date').val();
+      if(!selectedDate){
+        return;
+      }
+      window.elements = []; 
+
+      $.ajax({
+        url: '/occupied',
+        type: 'POST',
+        dataType: 'json',
+        data: {date: selectedDate, machine_id: <%=@machine.id%>},
+        success: function(response) {
+          // Update the hours selector with the new data
+          var hours = response.hours;
+          $(".hour-card").each(function (card){
+            const id = this.id.split("-")[1]
+            if(hours.includes(parseInt(id,10))){
+              $(this).addClass('disabled');
+              $(this).attr("onClick", "undefined");
+            } else {
+              $(this).removeClass('disabled');
+              $(this).attr("onClick", "window.addElement("+ id + ");");
+            }
+          })
+
+          // Perform any necessary DOM manipulation to update the hours selector
+        },
+        error: function(xhr, status, error) {
+          // Handle the error case
+        }
+      });
+    });
+  });
+</script>
