feat: admin reservation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
  *= require keyboard/keyboard-basic.min
  */
  @import "bootstrap";
-
+ @import "simple_calendar";
 
 .body-general{
     margin-top: 3rem;
