--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -17,7 +17,7 @@
       registro para los laboratorios de fabricación 
       de la Pontificia Universidad Católica de chile </p>
       <%if !signed_in?%>
-        <a href="/users/sign_in"><button class="btn btn-primary">Ingresar</button></a>
+        <a href="/reservations"><button class="btn btn-primary">Ir a reservas</button></a>
       <%else%>
         <a href="/laboratories"><button class="btn btn-primary">Registros</button></a>
       <%end%>
