--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
           <li class="nav-item">
             <a class="nav-link nav-link-medium active" href="/students">Estudiantes</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link nav-link-medium active" href="/reservations/admin_reservation">Admin Reservas</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle nav-link-medium active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Más</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
