--- a/app/views/machines/laboratories.erb
+++ b/app/views/machines/laboratories.erb
@@ -1,8 +1,10 @@
 
 <div style="width: 100%; padding: 1%; display: flex; justify-content: end;">
+<%if !current_user.nil? %>
   <%if current_user.rol == "admin" || current_user.lab_id == @laboratory_id%>
     <a class="btn btn-secondary" href="/machines/new"> Crear maquina</a>
   <%end%>
+<%end%>
 </div>
 <div class="gallery">
   <% @machines.each do |machine| %>
