--- a/app/views/reservations/admin_reservations.html.erb
+++ b/app/views/reservations/admin_reservations.html.erb
@@ -1,3 +1,4 @@
+  <h2 style="text-align: center">Reservas <%=@lab%></h2>
 <div style="margin-top: 3rem; text-align: center">
     <input type="date" id="selected-date">
     <button class="btn btn-primary" type="button" id="btn-reservation">Consultar</button>
@@ -20,18 +21,49 @@
           }
           response.reservations.map((reservation)=>{
             $('#content-reservation').append(`
-              <div class="card">
+              <div class="card" id="reservation-${reservation.reservation_id}" style=${reservation.status == "validada" ? "background-color:#d7fcc791" : "background-color:inherit"}>
                 <p style="font-weight: bold"> ${reservation.machine} </p>
                 <p style="font-weight: bold; font-size: 23px"> ${window.modules[reservation.hour_block]} </p>
                 <p> ${reservation.student.nombre} </p>
                 <p> ${reservation.student.correo} </p>
                 <p> ${reservation.student.rut} </p>
+                  ${ reservation.status != "validada" ? `<div class="row-flex-div" id="reservation-status-${reservation.reservation_id}">
+                    <button class="btn btn-secondary" type="button" onclick="validateReservation(${reservation.reservation_id})">  Validar </button>
+                    <button class="btn btn-primary" type="button" id="free-reservation" onclick="releaseReservation(${reservation.reservation_id})"> Liberar </button>
+                  </div>` : ""}
               </div>
             `)
           })
         }});
   });
-
+  function validateReservation(reservationId) {
+    $.ajax({
+      url: '/reservations/validate_reservation',
+      type: 'POST',
+      dataType: 'json',
+      data: { id: reservationId },
+      success: function(response) {
+        if(response.status === 200) {
+          alert('Reserva validada');
+          $("#reservation-"+reservationId).css('background-color','#d7fcc791');
+          $("#reservation-status-"+reservationId).css('display', 'none');
+        }
+      }});
+  }
+  function releaseReservation(reservationId) {
+    $.ajax({
+      url: '/reservations/release_reservation',
+      type: 'POST',
+      dataType: 'json',
+      data: { id: reservationId },
+      success: function(response) {
+        if(response.status === 200) {
+          alert('Reserva liberada');
+          $("#reservation-"+reservationId).css('display','none');
+          $("#reservation-status-"+reservationId).css('display', 'none');
+        }
+      }});
+  }
 
 </script>
 
