--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,8 @@
               <a class="dropdown-item" href="/visits">Visitas</a>
               <a class="dropdown-item" href="/students/new">Inscribir Estudiante</a>
               <a class="dropdown-item" href="/update_password">Cambiar contraseña</a>
+              <a class="dropdown-item" href="/reservations">Crear Reservas</a>
+              <a class="dropdown-item" href="/machines/lab/<%= current_user.lab_id %>">Administrar Máquinas</a>
               
             </div>
           </li>
